<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:focusable="true"
              android:focusableInTouchMode="true"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/app_toolbar_style">


        <TextView
            android:id="@+id/toolbar_title"
            style="@style/app_toolbar_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar"
            android:layout_gravity="center"
            android:text="@string/loan_apply"/>

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_car_model"
                style="@style/my_style_rectangle_white">

                <TextView
                    android:id="@+id/tv_car_title"
                    style="@style/style_text_small_black"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:text="@string/car_model"/>

                <ImageView
                    android:id="@+id/iv_arrows"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:src="@drawable/ic_back_gary_right"/>

                <TextView
                    android:id="@+id/tv_car_model"
                    style="@style/my_style_text_small_black"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_toRightOf="@id/tv_car_title"
                    android:layout_toLeftOf="@id/iv_arrows"
                    tools:text="阿斯顿马丁"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:background="@color/gray_line_color"/>

            <RelativeLayout
                android:id="@+id/rl_year"
                style="@style/my_style_rectangle_white">

                <TextView
                    android:id="@+id/tv_year_title"
                    style="@style/style_text_small_black"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:text="购买年份"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:src="@drawable/ic_back_gary_bottom"/>

                <TextView
                    android:id="@+id/tv_year"
                    style="@style/my_style_text_small_black"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_toRightOf="@id/tv_year_title"
                    tools:text="1988"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:background="@color/gray_line_color"/>

            <RelativeLayout
                android:id="@+id/rl_is_car_loan"
                style="@style/my_style_rectangle_white">

                <TextView
                    android:id="@+id/tv_car_loan_title"
                    style="@style/style_text_small_black"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:text="@string/is_car_loan"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:src="@drawable/ic_back_gary_bottom"/>

                <TextView
                    android:id="@+id/tv_is_car_loan"
                    style="@style/my_style_text_small_black"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_toRightOf="@id/tv_car_loan_title"
                    tools:text="是"/>

            </RelativeLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:background="@color/gray_line_color"/>

            <RelativeLayout
                android:id="@+id/rl_reg_date"
                style="@style/my_style_rectangle_white">

                <TextView
                    android:id="@+id/tv_reg_date_title"
                    style="@style/style_text_small_black"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:text="@string/first_reg_date"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:src="@drawable/ic_back_gary_bottom"/>

                <TextView
                    android:id="@+id/tv_reg_date"
                    style="@style/my_style_text_small_black"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_toRightOf="@id/tv_reg_date_title"
                    tools:text="2016-02-16"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:background="@color/gray_line_color"/>

            <RelativeLayout
                style="@style/my_style_rectangle_white">

                <TextView
                    android:id="@+id/tv_price_title"
                    style="@style/style_text_small_black"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:text="@string/new_car_price"/>

                <TextView
                    android:id="@+id/tv_price"
                    style="@style/my_style_text_small_gary"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:text="万元"/>

                <EditText
                    android:id="@+id/et_new_car_price"
                    style="@style/style_text_small_black"
                    android:layout_width="match_parent"
                    tools:text="12"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_toLeftOf="@id/tv_price"
                    android:layout_toRightOf="@id/tv_price_title"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:inputType="numberDecimal"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:background="@color/gray_line_color"/>

            <RelativeLayout
                style="@style/my_style_rectangle_white">

                <TextView
                    android:id="@+id/tv_car_color_title"
                    style="@style/style_text_small_black"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:text="@string/car_color"/>

                <EditText
                    android:id="@+id/et_car_color"
                    style="@style/style_text_small_black"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dp"
                    tools:text="白色"
                    android:layout_marginRight="8dp"
                    android:layout_toRightOf="@id/tv_car_color_title"
                    android:background="@null"
                    android:gravity="center_vertical"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:background="@color/gray_line_color"/>

            <RelativeLayout
                style="@style/my_style_rectangle_white">

                <TextView
                    android:id="@+id/tv_kilometers_title"
                    style="@style/style_text_small_black"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:text="@string/kilometers"/>

                <TextView
                    android:id="@+id/tv_kilometers"
                    style="@style/my_style_text_small_gary"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:text="公里"/>

                <EditText
                    android:id="@+id/et_kilometers"
                    style="@style/style_text_small_black"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dp"
                    tools:text="12"
                    android:layout_marginRight="8dp"
                    android:inputType="numberDecimal"
                    android:layout_toRightOf="@id/tv_kilometers_title"
                    android:layout_toLeftOf="@id/tv_kilometers"
                    android:background="@null"
                    android:gravity="center_vertical"/>

            </RelativeLayout>


            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="48dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="48dp"
                android:background="@drawable/rect_theme_btn_bg"
                android:text="获取评估借款额度"
                android:textColor="@color/white"
                android:textSize="@dimen/tv_size_small"/>
        </LinearLayout>

    </ScrollView>


</LinearLayout>