<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/app_toolbar_style">


        <TextView
            android:id="@+id/toolbar_title"
            style="@style/app_toolbar_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar"
            android:layout_gravity="center"
            android:text="@string/forgot_password"/>

    </android.support.v7.widget.Toolbar>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="16dp"
        android:background="@color/gray_line_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/phone_num"
            android:inputType="number"
            android:textColor="@color/black"
            android:textSize="@dimen/tv_size_small"/>

        <com.yiqihao.loan.widget.FormatEditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:openFormat="true"
            app:formatType="phoneNum"
            android:background="@null"
            android:inputType="number"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="@dimen/tv_size_small"/>

    </LinearLayout>



    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="16dp"
        android:background="@color/gray_line_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="新登录密码"
            android:textColor="@color/black"
            android:textSize="@dimen/tv_size_small"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="@dimen/tv_size_small"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="16dp"
        android:background="@color/gray_line_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        android:gravity="center_vertical">

        <TextView
            android:text="再次输入密码"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:textColor="@color/black"
            android:textSize="@dimen/tv_size_small"/>

        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="@dimen/tv_size_small"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="16dp"
        android:background="@color/gray_line_color"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_code"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:text="验证码"
            android:textColor="@color/black"
            android:textSize="@dimen/tv_size_small"/>

        <TextView
            android:id="@+id/tv_get_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:background="@drawable/rect_theme_bg"
            android:gravity="center"
            android:text="获取验证码"
            android:textColor="@color/themeColor"
            android:textSize="@dimen/tv_size_micro"/>

        <EditText
            android:id="@+id/et_code"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/tv_get_code"
            android:layout_toRightOf="@id/tv_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="@dimen/tv_size_small"/>

    </RelativeLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rect_theme_btn_bg"
        android:text="@string/complete"
        android:textColor="@color/white"
        android:textSize="@dimen/tv_size_small"/>



</LinearLayout>